@@ -1,8 +1,8 @@
 package SpringBoot_BoardProject.models.member;
 
+import lombok.RequiredArgsConstructor;
 import SpringBoot_BoardProject.entities.Member;
 import SpringBoot_BoardProject.repositories.MemberRepository;
-import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -25,7 +25,7 @@ public class MemberInfoService implements UserDetailsService {
         Member member = repository.findByEmail(username).orElseThrow(() -> new UsernameNotFoundException(username));
 
         List<GrantedAuthority> authorities
-                = Arrays.asList(new SimpleGrantedAuthority(member.getMtype().name()));
+                = List.of(new SimpleGrantedAuthority(member.getMtype().name()));
 
 
         return MemberInfo.builder()
